# libvmod-dns

./: .gitignore  COPYING  Makefile.am  README.rst  bootstrap  configure.ac  dns.vcl  uas.txt  vmod-dns.spec
debian/: changelog  control  copyright
src/: Makefile.am  vmod_dns.c  vmod_dns.vcc
src/tests/: test01.vtc  test02.vtc
src/vtc/: vmod_dns01.vtc  vmod_dns02.vtc  vmod_dns_example.vtc  vmod_dns_valid_host_host.vtc  vmod_dns_valid_host_ip.vtc  vmod_dns_valid_ip.vtc
